2012-02-22  Albert Chu <chu11@llnl.gov>

	* bmc-config/bmc-config-rmcpplus-conf-privilege-section.c
	(id_checkout): Fix cipher suite privilege
	configuration corner cases workaround on HP DL145.

	* man/manpage-common-workaround-outofband-20-text.man: Document
	Intel S2600JF/Appro 512X workaround.
	
2012-02-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.c (common_parse_opt),
	common/toolcommon/tool-config-file-common.c
	(_config_file_cipher_suite_id): Differentiate between invalid and
	unsupported cipher suites in error message output.
	
2012-02-21  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-issues-and-workarounds.txt,
	man/ipmi-sensors.8.pre.in: Update information concerning
	'discretereading' workaround.

	* ipmi-sensors/: Code cleanup, rename 'reading' to
	'sensor_reading' for consistency.

	* libfreeipmi/cmds/ipmi-lan-cmds.c: Fix packet layout for
	tmpl_cmd_get_lan_configuration_parameters_rmcpplus_messaging_cipher_suite_entry_support_rs.
	
	* doc/freeipmi-faq.texi: Add Powerman configuration notes for
	C410x.  Fix various parts.
	
2012-02-17  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Various code cleanup.  Change "DIAG_INTR" to
	"DIAGNOSTIC_INTERRUPT" in code for readability.  Make code
	consistent to other codein FreeIPMI.  Add asserts as needed.

	* Globally: Various code cleanup.  Use switch statements where it
	would be more appropriate for performance improvements.
	
2012-02-17  Albert Chu <chu11@llnl.gov>

	Merge dellc410x

	* ipmipower/: Add --oem-power-type option and support C410x OEM
	power type.  Support ability to input power control to same host
	multiple times under OEM conditions.  Serialize power control
	operations to same host.

	* ipmipower/ipmipower_oem.h, ipmipower/ipmipower_oem.c: New files.

	* ipmipower/: Various code cleanup given re-architecture.

	* common/miscutil/hostlist.c: Remove fprintf debug error messages
	from tool.

	* ipmi-oem/ipmi-oem-dell.c: Fix C410X corner case.
